# arches-model-viewer

./: MANIFEST.in  README.md  package.json  pyproject.toml
arches_model_viewer/: apps.py  signals.py
arches_model_viewer/media/js/views/components/cards/: file-viewer.js
arches_model_viewer/media/js/views/components/cards/file-renderers/: modelviewer.js  pointcloudviewer.js
arches_model_viewer/media/js/views/components/reports/: digital-object.js
arches_model_viewer/src/arches_model_viewer/file-renderers/: ModelViewer.vue  PointCloudViewer.vue
arches_model_viewer/src/arches_model_viewer/file-renderers/point-cloud/: clipping.ts  gui.ts  scene.ts
arches_model_viewer/templates/views/components/cards/file-renderers/: modelviewer.htm  pointcloudviewer.htm
arches_model_viewer/templates/views/components/reports/: digital-object.htm
